# modular_aq

./: CMakeLists.txt  README.md
include/maq/: active_object.h  cancellable_holder.h  container.h  error.h  extractor.h  init.h  plugins.h  priority_container.h  queue_container.h  stat_holder.h  statistic.h  ts_container.h
include/maq/detail/: extractor.h  multi_index_keys.h  ts_context.h
include/maq/plugins/: deadline.h  deferred.h  disable.h  plugin.h  priority.h  time_in_queue.h
tests/: CMakeLists.txt
tests/include/: environment.h  test_templates.h
tests/src/: cancel.cpp  capacity.cpp  check_specializations.cpp  concurrency.cpp  container.cpp  deadline.cpp  defer.cpp  enqueue_task_in_cancel_hook.cpp  hangup.cpp  inactive.cpp  keep_holder.cpp  keep_holder_ptr.cpp  keep_ptr.cpp  keep_type.cpp  maq_vs_io_service.cpp  overload_hook.cpp  performance.cpp  restart.cpp  stat.cpp  thread_decorator.cpp
